[package]
name = "scirs2-transform"
version = "0.1.0-alpha.3"
edition = "2021"
authors = ["SciRS2 Team"]
license = "MIT OR Apache-2.0"
description = "Data transformation module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["transform", "feature-engineering", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { path = "../scirs2-core", version = "0.1.0-alpha.3", features = ["validation"] }
scirs2-linalg = { path = "../scirs2-linalg", version = "0.1.0-alpha.3" }
scirs2-stats = { path = "../scirs2-stats", version = "0.1.0-alpha.3" }
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
ndarray-rand = { workspace = true }
ndarray-stats = "0.6.0"
num-traits = "0.2.19"
num-complex = "0.4.6"
thiserror = "2.0.12"
approx = "0.5.1"
rayon = "1.5.3"
rand = "0.9.0"

# Future dependency for PandRS with appropriate abstractions
# pandrs_wrapper = { path = "../wrappers/pandrs_wrapper", optional = true }

[features]
default = []
# Enable external ML library wrappers
# pandrs = ["dep:pandrs_wrapper"]

[dev-dependencies]
scirs2-datasets = { path = "../scirs2-datasets", version = "0.1.0-alpha.3" }
plotters = "0.3.5"
