[package]
name = "scirs2-transform"
version.workspace = true
edition = "2021"
authors = ["SciRS2 Team"]
license = "MIT OR Apache-2.0"
description = "Data transformation module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["transform", "feature-engineering", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["validation", "parallel"] }
scirs2-linalg = { workspace = true }
scirs2-stats = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
ndarray-stats = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
approx = { workspace = true }
# rayon = { workspace = true }  # Now use scirs2-core parallel abstractions
rand = { workspace = true }

# Future dependency for PandRS with appropriate abstractions
# pandrs_wrapper = { path = "../wrappers/pandrs_wrapper", optional = true }

[features]
default = []
# Enable external ML library wrappers
# pandrs = ["dep:pandrs_wrapper"]

[dev-dependencies]
scirs2-datasets = { workspace = true }
plotters = { workspace = true }
