[package]
name = "scirs2-vision"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["SciRS2 Team"]
license = "Apache-2.0"
description = "Computer vision module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["vision", "image-processing", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { path = "../scirs2-core", version = "0.1.0-alpha.1" }
# Temporarily commented out for publishing
# scirs2-ndimage = { path = "../scirs2-ndimage", version = "0.1.0-alpha.1" }
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
num-traits = "0.2.19"
num-complex = "0.4.6"
thiserror = "1.0.69"
rand = "0.9.0"

# Vision specific dependencies
image = { version = "0.25", features = ["jpeg", "png", "gif"] }

[features]
default = []

[[example]]
name = "feature_detection"
path = "examples/feature_detection.rs"

[[example]]
name = "color_transformations"
path = "examples/color_transformations.rs"

[[example]]
name = "image_segmentation"
path = "examples/image_segmentation.rs"

[[example]]
name = "morphological_operations"
path = "examples/morphological_operations.rs"
