[package]
name = "scirs2-vision"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["SciRS2 Team"]
license = "MIT OR Apache-2.0"
description = "Computer vision module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["vision", "image-processing", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true }
# Temporarily commented out for publishing
# scirs2-ndimage = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

# Vision specific dependencies
image = { workspace = true }
rayon = { workspace = true }

[features]
default = []

[[example]]
name = "feature_detection"
path = "examples/feature_detection.rs"

[[example]]
name = "color_transformations"
path = "examples/color_transformations.rs"

[[example]]
name = "image_segmentation"
path = "examples/image_segmentation.rs"

[[example]]
name = "morphological_operations"
path = "examples/morphological_operations.rs"

[[example]]
name = "canny_edge_detection"
path = "examples/canny_edge_detection.rs"

[[example]]
name = "edge_detection_comparison"
path = "examples/edge_detection_comparison.rs"

[[example]]
name = "corner_detection_comparison"
path = "examples/corner_detection_comparison.rs"

[[example]]
name = "non_rigid_transformations"
path = "examples/non_rigid_transformations.rs"

[[example]]
name = "noise_reduction"
path = "examples/noise_reduction.rs"
