[package]
name = "scirs2"
version = "0.1.0-alpha.3"
edition = "2021"
authors = ["SciRS2 Team"]
description = "A Rust port of SciPy with AI/ML extensions - Scientific Computing and AI Library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["scientific", "mathematics", "science", "scipy", "ai"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core module - always included
scirs2-core = { path = "../scirs2-core", version = "0.1.0-alpha.3", features = ["cache", "logging", "profiling", "memory_management"] }

# Basic utility dependencies
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
num-traits = "0.2.19"
num-complex = "0.4.6"
thiserror = "1.0.69"
rand = "0.9.0"

# Standard modules
scirs2-linalg = { path = "../scirs2-linalg", version = "0.1.0-alpha.3", optional = true }
scirs2-stats = { path = "../scirs2-stats", version = "0.1.0-alpha.3", optional = true }
scirs2-integrate = { path = "../scirs2-integrate", version = "0.1.0-alpha.3", optional = true }
scirs2-interpolate = { path = "../scirs2-interpolate", version = "0.1.0-alpha.3", optional = true }
scirs2-optimize = { path = "../scirs2-optimize", version = "0.1.0-alpha.3", optional = true }
scirs2-fft = { path = "../scirs2-fft", version = "0.1.0-alpha.3", optional = true }
scirs2-special = { path = "../scirs2-special", version = "0.1.0-alpha.3", optional = true }
scirs2-signal = { path = "../scirs2-signal", version = "0.1.0-alpha.3", optional = true }
scirs2-sparse = { path = "../scirs2-sparse", version = "0.1.0-alpha.3", optional = true }
scirs2-spatial = { path = "../scirs2-spatial", version = "0.1.0-alpha.3", optional = true }
scirs2-cluster = { path = "../scirs2-cluster", version = "0.1.0-alpha.3", optional = true }
scirs2-transform = { path = "../scirs2-transform", version = "0.1.0-alpha.3", optional = true }
scirs2-metrics = { path = "../scirs2-metrics", version = "0.1.0-alpha.3", optional = true }

# Preview/experimental modules
scirs2-ndimage = { path = "../scirs2-ndimage", version = "0.1.0-alpha.3", optional = true }
scirs2-neural = { path = "../scirs2-neural", version = "0.1.0-alpha.3", optional = true }
scirs2-optim = { path = "../scirs2-optim", version = "0.1.0-alpha.3", optional = true }
scirs2-series = { path = "../scirs2-series", version = "0.1.0-alpha.3", optional = true }
scirs2-text = { path = "../scirs2-text", version = "0.1.0-alpha.3", optional = true }
scirs2-io = { path = "../scirs2-io", version = "0.1.0-alpha.3", optional = true }
scirs2-datasets = { path = "../scirs2-datasets", version = "0.1.0-alpha.3", optional = true }
scirs2-graph = { path = "../scirs2-graph", version = "0.1.0-alpha.3", optional = true }
scirs2-vision = { path = "../scirs2-vision", version = "0.1.0-alpha.3", optional = true }
scirs2-autograd = { path = "../scirs2-autograd", version = "0.1.0-alpha.3", optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"

[features]
default = ["standard"]

# Core module features
cache = []
logging = []
profiling = []
memory_management = []

# Functional groupings
standard = [
    "linalg", "stats", "integrate", "interpolate", "optimize", 
    "fft", "special", "signal", "sparse", "spatial", 
    "cluster", "transform", "metrics"
]
ai = ["neural", "optim", "autograd"]
experimental = [
    "ndimage", "neural", "optim", "series", "text", 
    "io", "datasets", "graph", "vision", "autograd"
]
full = ["standard", "experimental"]

# Individual module features
linalg = ["dep:scirs2-linalg"]
stats = ["dep:scirs2-stats"]
integrate = ["dep:scirs2-integrate"]
interpolate = ["dep:scirs2-interpolate"]
optimize = ["dep:scirs2-optimize"]
fft = ["dep:scirs2-fft"]
special = ["dep:scirs2-special"]
signal = ["dep:scirs2-signal"]
sparse = ["dep:scirs2-sparse"]
spatial = ["dep:scirs2-spatial"]
cluster = ["dep:scirs2-cluster"]
transform = ["dep:scirs2-transform"]
metrics = ["dep:scirs2-metrics"]
ndimage = ["dep:scirs2-ndimage"]
neural = ["dep:scirs2-neural"]
optim = ["dep:scirs2-optim"]
series = ["dep:scirs2-series"]
text = ["dep:scirs2-text"]
io = ["dep:scirs2-io"]
datasets = ["dep:scirs2-datasets"]
graph = ["dep:scirs2-graph"]
vision = ["dep:scirs2-vision"]
autograd = ["dep:scirs2-autograd"]