[package]
name = "scirs2"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A Rust port of SciPy with AI/ML extensions - Scientific Computing and AI Library (scirs2)"
license.workspace = true
repository.workspace = true
keywords = ["scientific", "mathematics", "science", "scipy", "ai"]
categories = ["science", "mathematics", "algorithms"]

[lints]
workspace = true

[dependencies]
# Core module - always included
scirs2-core = { workspace = true, features = ["cache", "logging", "profiling", "memory_management"] }

# Basic utility dependencies
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

# Standard modules
scirs2-linalg = { workspace = true, optional = true }
scirs2-stats = { workspace = true, optional = true }
scirs2-integrate = { workspace = true, optional = true }
scirs2-interpolate = { workspace = true, optional = true }
scirs2-optimize = { workspace = true, optional = true }
scirs2-fft = { workspace = true, optional = true }
scirs2-special = { workspace = true, optional = true }
scirs2-signal = { workspace = true, optional = true }
scirs2-sparse = { workspace = true, optional = true }
scirs2-spatial = { workspace = true, optional = true }
scirs2-cluster = { workspace = true, optional = true }
scirs2-transform = { workspace = true, optional = true }
scirs2-metrics = { workspace = true, optional = true, default-features = true }

# Preview/experimental modules
scirs2-ndimage = { workspace = true, optional = true }
scirs2-neural = { workspace = true, optional = true }
scirs2-optim = { workspace = true, optional = true }
scirs2-series = { workspace = true, optional = true }
scirs2-text = { workspace = true, optional = true }
scirs2-io = { workspace = true, optional = true }
scirs2-datasets = { workspace = true, optional = true }
scirs2-graph = { workspace = true, optional = true }
scirs2-vision = { workspace = true, optional = true }
scirs2-autograd = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }

[features]
default = ["standard"]

# Core module features
cache = []
logging = []
profiling = []
memory_management = []

# BLAS backend override features (optional - platform defaults are used if not specified)
# These allow users to override platform defaults when needed
accelerate = ["linalg", "scirs2-linalg/accelerate"]  # Force use of macOS Accelerate framework
openblas = ["linalg", "scirs2-linalg/openblas-backend"]  # Force use of OpenBLAS
# intel-mkl = ["linalg", "scirs2-linalg/intel-mkl"]  # Force use of Intel MKL - removed due to conflicts
netlib = ["linalg", "scirs2-linalg/netlib"]  # Force use of reference Netlib

# Functional groupings
standard = [
    "linalg", "stats", "integrate", "interpolate", "optimize",
    "fft", "special", "signal", "sparse", "spatial", "cluster",
    "transform", "metrics"
]
ai = ["neural", "optim", "autograd"]
experimental = [
    "ndimage", "neural", "optim", "series", "text",
    "io", "datasets", "graph", "vision", "autograd"
]
full = ["standard", "experimental"]

# Individual module features
linalg = ["dep:scirs2-linalg"]
stats = ["dep:scirs2-stats"]
integrate = ["dep:scirs2-integrate"]
interpolate = ["dep:scirs2-interpolate"]
optimize = ["dep:scirs2-optimize"]
fft = ["dep:scirs2-fft"]
special = ["dep:scirs2-special"]
signal = ["dep:scirs2-signal"]
sparse = ["dep:scirs2-sparse"]
spatial = ["dep:scirs2-spatial"]
cluster = ["dep:scirs2-cluster"]
transform = ["dep:scirs2-transform"]
metrics = ["dep:scirs2-metrics"]
ndimage = ["dep:scirs2-ndimage"]
neural = ["dep:scirs2-neural"]
optim = ["dep:scirs2-optim"]
series = ["dep:scirs2-series"]
text = ["dep:scirs2-text"]
io = ["dep:scirs2-io"]
datasets = ["dep:scirs2-datasets"]
graph = ["dep:scirs2-graph"]
vision = ["dep:scirs2-vision"]
autograd = ["dep:scirs2-autograd"]